--- a/src/app/article-list/hn-article-list/hn-article-list.component.html
+++ b/src/app/article-list/hn-article-list/hn-article-list.component.html
@@ -9,5 +9,7 @@
   <div class="col-xs-6">
     <router-outlet></router-outlet>
   </div>
-
+</div>
+<div class="row">
+  <button type="button" class="btn btn-success" (click)="onAddArticle()">Add Article</button>
 </div>
