--- a/src/app/article-list/link-article-list/link-article-list.component.html
+++ b/src/app/article-list/link-article-list/link-article-list.component.html
@@ -1,9 +1,16 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-6">
     <app-link-article-item
       *ngFor="let linkArticle of articles; let i = index"
       [linkArticle]="linkArticle"
       [index]=i
     ></app-link-article-item>
+  </div>
+  <div class="cols-xs-5">
+    <router-outlet></router-outlet>
+    <hr>
+  </div>
+  <div class="cols-xs-12">
+    <button type="button" class="btn btn-success" (click)="onAddArticle()">Add Article</button>
   </div>
 </div>
